--- a/jpashop/src/main/resources/templates/Items/updateItem.html
+++ b/jpashop/src/main/resources/templates/Items/updateItem.html
@@ -6,7 +6,7 @@
 <div class="container">
     <div th:replace="Fragments/bodyheader :: bodyHeader"/>
 
-    <form th:action="@{/items/edit}" th:object="${form}" method="post">
+    <form th:object="${form}" method="post">
         <input type="hidden" th:field="*{id}" />
 
         <div class="form-group">
